# bouncehammer

./: .gitignore  AUTHORS  INSTALL  Implement.PL  LICENSE  Makefile.am  Makefile.in  Modules.PL  README  RELEASE_NOTES  RELEASE_NOTES.JA  SUPPORT  UPGRADE  configure  configure.ac
src/cgi/: Makefile.am  Makefile.in  api.PL  api.cgi  bouncehammer.PL  bouncehammer.cgi
src/etc/: Makefile.am  Makefile.in  aliases-example  available-countries-example  bouncehammer.cf-example  crontab-example  group-by-area-example  hostgroup-by-area-example  httpd.conf-example  neighbor-domains-example  prove.cf  syslog.conf-example  test-run.cf  webui.cf-example
src/lib/: Kanadzuchi.pm  Makefile.am  Makefile.in
src/lib/Kanadzuchi/: API.pm  Address.pm  Archive.pm  BdDR.pm  Crypt.pm  Exceptions.pm  ISO3166.pm  Iterator.pm  Log.pm  MDA.pm  MTA.pm  Mail.pm  Makefile.am  Makefile.in  Mbox.pm  Metadata.pm  RDB.pm  RFC1893.pm  RFC2606.pm  RFC2822.pm  RFC3463.pm  Statistics.pm  String.pm  Time.pm  UI.pm
src/lib/Kanadzuchi/API/: Dispatch.pm  HTTP.pm  Makefile.am  Makefile.in
src/lib/Kanadzuchi/Archive/: Bzip2.pm  Gzip.pm  Makefile.am  Makefile.in  Zip.pm
src/lib/Kanadzuchi/BdDR/: BounceLogs.pm  Cache.pm  DailyUpdates.pm  Makefile.am  Makefile.in  Page.pm
src/lib/Kanadzuchi/Config/: Makefile.am  Makefile.in  TestRun.pm
src/lib/Kanadzuchi/Log/: Makefile.am  Makefile.in  Report.pm
src/libexec/: Makefile.am  Makefile.in  mp-startup.pl  mp-startup.pl.IN
src/sql/: Makefile.am  Makefile.in  MySQL-dailyupdates.sql  MySQL.sql  PostgreSQL-dailyupdates.sql  PostgreSQL.sql  SQLite-dailyupdates.sql  SQLite.sql  mastertable-hostgroups.sql  mastertable-many-providers.sql  mastertable-providers.sql  mastertable-reasons.sql  more-example-senderdomains.sql  records-example.sql  update-2.6.0.sql
template/l10n/en/: Makefile.am  Makefile.in  desc.tt  error.tt  heads.tt  help-addresser.html  help-available-countries.html  help-dailyupdates-day.html  help-dailyupdates-modified.html  help-dailyupdates-registered.html  help-dailyupdates-skipped.html  help-dailyupdates-week.html  help-diagnostic-code.html  help-download-file.html  help-hostgroup.html  help-mta-modules.html  help-neighbor-domains.html  help-parsed-message.html  help-provider.html  help-reason.html  help-recipient.html  help-senderdomain.html  help-to-update-the-record.html  hostgroup.tt  reason.tt  terms.tt  time.tt  words.tt
template/l10n/ja/: Makefile.am  Makefile.in  desc.tt  error.tt  heads.tt  help-addresser.html  help-available-countries.html  help-dailyupdates-day.html  help-dailyupdates-modified.html  help-dailyupdates-registered.html  help-dailyupdates-skipped.html  help-dailyupdates-week.html  help-destination-domain.html  help-diagnostic-code.html  help-hostgroup.html  help-mta-modules.html  help-neighbor-domains.html  help-provider.html  help-reason.html  help-recipient.html  help-updated-at.html  hostgroup.tt  reason.tt  terms.tt  time.tt  words.tt
template/standard/element/: Makefile.am  Makefile.in  div-create-a-new-mastertable-record.en.html  div-create-a-new-mastertable-record.html  div-create-a-new-mastertable-record.ja.html  div-delete-a-mastertable-record.en.html  div-delete-a-mastertable-record.html  div-delete-a-mastertable-record.ja.html  div-error.html  div-exception.html  div-index.en.html  div-index.html  div-index.ja.html  div-mastertable-contents.en.html  div-mastertable-contents.html  div-mastertable-contents.ja.html  div-mastertable-error.en.html  div-mastertable-error.html  div-mastertable-error.ja.html  div-mastertable-removed.en.html  div-mastertable-removed.html  div-mastertable-removed.ja.html  div-menubar.en.html  div-menubar.html  div-menubar.ja.html  div-new-message-token.en.html  div-new-message-token.html  div-new-message-token.ja.html  div-pagefooter.html  div-pager.en.html  div-pager.ja.html  div-pagination.en.html  div-pagination.html  div-pagination.ja.html  div-result.en.html  div-result.html  div-result.ja.html  dtd-xhtml.html  form-search-by-recipient.en.html  form-search-by-recipient.html  (+16 more)
template/standard/help/: Makefile.am  Makefile.in  h-bounceddate.en.html  h-bounceddate.ja.html  h-description.en.html  h-description.ja.html  h-destination-descr.en.html  h-destination-descr.ja.html  h-destination-input.en.html  h-destination-input.ja.html  h-download-input.en.html  h-download-input.ja.html  h-frequency-descr.en.html  h-frequency-descr.ja.html  h-hostgroup-select.en.html  h-hostgroup-select.ja.html  h-messagetoken-descr.en.html  h-messagetoken-descr.ja.html  h-messagetoken-input.en.html  h-parsed-messages.en.html  h-parsed-messages.ja.html  h-reason-select.en.html  h-reason-select.ja.html  h-recipient-address-descr.en.html  h-recipient-address-descr.ja.html  h-recipient-address-input.en.html  h-recipient-address-input.ja.html  h-record-update.en.html  h-record-update.ja.html  h-recordid-descr.en.html  h-recordid-descr.ja.html  h-senderdomain-descr.ja.html  h-senderdomain-input.en.html  h-senderdomain-input.ja.html  h-updateddate.en.html
template/standard/javascript/: Makefile.am  Makefile.in  bouncehammer.js  dailyupdates.js
template/standard/page/: Makefile.am  Makefile.in  about.html  aggregate.html  copyright.html  countries.html  dailyupdates.html  exception.en.html  exception.html  exception.ja.html  index.en.html  index.html  index.ja.html  mastertable.en.html  mastertable.html  mastertable.ja.html  messagetoken.en.html  messagetoken.html  messagetoken.ja.html  mtamodules.html  neighbors.html  profile.en.html  profile.html  profile.ja.html  search.en.html  search.html  search.ja.html  startsearch.html  statistics.en.html  statistics.ja.html  summary.en.html  summary.html  summary.ja.html  test.en.html  test.html  test.ja.html  version.html
template/standard/stylesheet/: Makefile.am  Makefile.in  aggregate.css  bouncehammer.css  country.css  dailyupdates.css  dashboard.css  mastertable.css  messagetoken.css  mtamodules.css  nationalflag.css  pager.css  pagination.css  profile.css  reason.css  record.css  search.css  statistics.css  summary.css  testparse.css
(+554 files in other folders)
